Bug 366000 MaiHyperlink class memory leakr=aaronleventhal sr=neil